--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.25.3",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-ffmpeg": "^0.3.1",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -15,7 +16,9 @@
     "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-source-contentful": "^3.1.3",
     "gatsby-source-filesystem": "^2.4.2",
+    "gatsby-transformer-ffmpeg": "^0.3.8",
     "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-video": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
