--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "gatsby": "^2.25.3",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
